--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ bandit = "^1.7.0"
 flake8 = "^3.8.4"
 pytest-mock = "^3.4.0"
 pytest-cov = "^2.10.1"
+mkdocs = "^1.1.2"
+mkdocs-material = "^6.2.7"
+mkdocstrings = "^0.14.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
