--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ pytest-cov = "^2.10.1"
 mkdocs = "^1.1.2"
 mkautodoc = "^0.1.0"
 mkdocs-material = "^7.0.3"
+codecov = "^2.1.11"
+nox = "^2020.12.31"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
