--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "Topic :: System :: Networking",
     "Operating System :: OS Independent",
+    "Programming Language :: Python :: Implementation :: PyPy"
 ]
 
 packages = [
