--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,10 @@ jobs:
       matrix:
         os: [ 'ubuntu-latest', 'macos-latest' ,'windows-latest' ]
         python: [ pypy3, 3.6, 3.7, 3.8, 3.9, '3.10' ]
+        # it seems that the "new" macOS latest used does not play well with pypy, so we will disable it for now
+        exclude:
+          - os: macos-latest
+            python: pypy3
 
     steps:
       - uses: actions/checkout@v2
