--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 6
       matrix:
-        os: [ 'ubuntu-latest', 'macos-10.15' ,'windows-latest' ]
+        os: [ 'ubuntu-latest', 'macos-latest' ,'windows-latest' ]
         python: [ pypy-3.7, 3.6, 3.7, 3.8, 3.9, '3.10' ]
 
     steps:
