--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       max-parallel: 6
       matrix:
         os: [ 'ubuntu-latest', 'macos-latest' ,'windows-latest' ]
-        python: [ pypy3, 3.6, 3.7, 3.8, 3.9, '3.10' ]
+        python: [ pypy-3.7, 3.6, 3.7, 3.8, 3.9, '3.10' ]
 
     steps:
       - uses: actions/checkout@v2
@@ -27,7 +27,11 @@ jobs:
       - name: Lint
         run: nox -s lint
         if: matrix.os == 'ubuntu-latest' && matrix.python == '3.10'
-      - name: Tests
+      - name: CPython tests
         run: nox -s tests-${{ matrix.python }}
+        if: matrix.python != 'pypy-3.7'
         env:
           CODECOV_TOKEN: ${{ secrets.codecov_token }}
+      - name: Pypy tests
+        run: nox -s tests-pypy3
+        if: matrix.python == 'pypy-3.7'
