--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,14 @@ nox = "^2022.1.7"
 testpaths = ["tests"]
 addopts = "--cov=kifurushi --cov-report html --cov-report xml"
 
+[tool.isort]
+line_length = 120
+profile = "black"
+
+[tool.black]
+line-length = 120
+skip-string-normalization = true
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
