--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,13 +11,15 @@ jobs:
     runs-on: 'ubuntu-latest'
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python 3.7
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.7
-      - name: Install python dependencies
-        run: python -m pip install -U pip nox
+          python-version: 3.8
+      - name: Install python pre-requisites
+        run: python -m pip install -U pip nox pipx
+      - name: Install poetry
+        run: pipx install "poetry<1.8.0"
       - name: Build and deploy
         run: nox -s deploy
         env:
