--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,36 +26,51 @@ packages = [
 "Bug Tracker" = "https://github.com/lewoudar/kifurushi/issues"
 
 [tool.poetry.dependencies]
-python = "^3.7"
-attrs = "^21.2.0"
+python = "^3.8"
+attrs = "^23.1.0"
 
-[tool.poetry.dev-dependencies]
-pytest = "^7.0"
-scapy = "^2.4.4"
-bandit = "^1.7.0"
-flake8 = "^3.8.4"
+[tool.poetry.group.lint.dependencies]
+bandit = "^1.7.4"
+ruff = "^0.1.6"
+
+[tool.poetry.group.test.dependencies]
+pytest = "^7.4.3"
 pytest-mock = "^3.4.0"
-pytest-cov = "^2.10.1"
-mkdocs = "^1.3.0"
-mkautodoc = "^0.1.0"
-mkdocs-material = "^8.3.0"
-nox = "^2022.1.7"
-pre-commit = "^2.19.0"
-isort = "^5.10.1"
-black = "^22.3.0"
-safety = "^2.0.0"
+pytest-cov = "^4.1.0"
+
+[tool.poetry.group.dev.dependencies]
+scapy = "^2.4.4"
+nox = "^2023.4.22"
+pre-commit = "^3.5.0"
+
+[tool.poetry.group.docs.dependencies]
+mkdocs = "^1.5.3"
+mkautodoc = "^0.2.0"
+mkdocs-material = "^9.4.14"
+
+[tool.poetry.group.audit.dependencies]
+safety = "^2.3.5"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
-addopts = "--cov=kifurushi --cov-report html --cov-report xml"
+addopts = "--cov=kifurushi --cov-report html --cov-report xml --cov-report term"
 
-[tool.isort]
-line_length = 120
-profile = "black"
-
-[tool.black]
+[tool.ruff]
 line-length = 120
-skip-string-normalization = true
+target-version = "py38"
+
+[tool.ruff.lint]
+extend-select = [
+  "UP",  # pyupgrade
+  "I",   # isort
+  "S",   # flake8-bandit
+  "B",   # flake8-bugbear
+  "C90", # McCabe complexity
+  "RUF"
+]
+
+[tool.ruff.format]
+quote-style = "single"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
